<resources>
    <string name="app_name">NITK On Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="server_client_id">803577935837-vpfc9acmb7i274qi9u8jotg1qcddjqrb.apps.googleusercontent.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_signout">Sign Out</string>
    <string name="server_unreachable_msg">Unable to reach Apptronix Server</string>
    <string name="server_authentication_failed">Server authentication failed</string>
    <string name="g_login_failed">Google Login Failed</string>
    <string name="on_schedule">On Schedule</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="time_table">Time Table</string>
    <string name="assignments">Assignments</string>
    <string name="attendance">Attendance</string>
    <string name="tests">Tests</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="fetching_data">Fetching data...</string>
    <string name="no_classes_today">No classes today :)</string>
    <string name="profile_picture">profile picture</string>
    <string name="select_day">Select day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="upload_text">UPLOAD</string>
    <string name="weightage">Weightage</string>
    <string name="date">Date</string>
    <string name="course">Course</string>
    <string name="desc">Description</string>
    <string name="title">Title</string>
    <string name="select_course">Select course</string>
    <string name="uploadtitle">Upload</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="uploading">Uploading</string>
    <string name="uploadsuccesful">Upload Successful</string>
    <string name="requestlogin">Please login again</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="connection_failed">Connection failed</string>
    <string name="invalid_email">enter a valid email address</string>
    <string name="password_error">between 4 and 10 alphanumeric characters</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="titleError">You need to enter a title</string>
    <string name="descError">You need to enter a description</string>
    <string name="courseCodeError">You need to enter a valid course code</string>
    <string name="dateError">You need to enter a date</string>
    <string name="weightageError">You need to enter a weightage</string>
    <string name="pick_action">Pick an Action</string>
    <string name="courses">Courses</string>
    <string name="new_course">New Course</string>
    <string name="timeError">Please enter valid time</string>
    <string name="updateAttendance">updateAttendance</string>
    <string name="max_score">max score</string>
    <string name="upload_notifications_channel">UploadNotifications</string>
    <string name="academics_notifications_channel">AcademicNotifications</string>
</resources>
