<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/ic_timetable"
            android:title="@string/time_table" />

        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/assignments" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/attendance" />

        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_tests"
            android:title="@string/tests" />

        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/courses" />

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
