<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/on_schedule"
            android:textSize="36sp"
            android:fontFamily="sans-serif-condensed"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rounded_input_field" />

            <TextView
                android:id="@+id/text_dummy_hint_username"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="Email"
                android:textSize="16sp"
                android:background="@android:color/white"
                android:visibility="invisible"/>

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="Email"
                android:textColorHint="@android:color/black"
                app:hintTextAppearance="@style/HintTextStyle">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rounded_input_field" />

            <TextView
                android:id="@+id/text_dummy_hint_password"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="Password"
                android:textSize="16sp"
                android:background="@android:color/white"
                android:visibility="invisible"/>


            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="Password"
                android:textColorHint="@android:color/black"
                app:hintTextAppearance="@style/HintTextStyle">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:contentDescription="@string/login"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/google_sign_in"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>